# adaptive-classifier

./: config.yaml  pyproject.toml
src/adaptive_classifier/: classifier.py  config_loader.py  memory.py
web/: app.py  config.yaml
